Fixed bugs in algorithm choosing visible portion of map

--- a/app/styles/components/_map.scss
+++ b/app/styles/components/_map.scss
@@ -5,8 +5,8 @@ body {
 .square {
     border: none;
     background: grey;
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     margin: -1px;
     float: left;
 }
